# haskell-player

./: LICENSE  README.md  haskell-player.cabal  stack.yaml
app/: Main.hs
scripts/: hackage-docs.sh
src/: Player.hs
src/Player/: AudioInfo.hs  AudioPlay.hs  Types.hs  Widgets.hs
src/Sound/: Player.hs
src/Sound/Player/: AudioInfo.hs  AudioPlay.hs  Types.hs  Widgets.hs
