name:                haskell-player
version:             0.1.1.0
synopsis:            A terminal music player based on afplay
description:         Please see README.md
homepage:            https://github.com/potomak/haskell-player
license:             BSD3
license-file:        LICENSE
author:              Giovanni Cappellotto
maintainer:          potomak84@gmail.com
copyright:           2016 Giovanni Cappellotto
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Player
                     , Player.AudioInfo
                     , Player.AudioPlay
                     , Player.Types
                     , Player.Widgets
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , brick >= 0.6.4
                     , bytestring
                     , data-default
                     , directory
                     , filepath
                     , microlens
                     , process
                     , text
                     , transformers
                     , vector
                     , vty
                     , xml-conduit
  default-language:    Haskell2010

executable haskell-player
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , haskell-player

  default-language:    Haskell2010

test-suite haskell-player-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-player
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/potomak/haskell-player
