name:                haskell-player
version:             0.1.3.1
synopsis:            A terminal music player based on afplay
description:         Please see README.md
homepage:            https://github.com/potomak/haskell-player
license:             BSD3
license-file:        LICENSE
author:              Giovanni Cappellotto
maintainer:          potomak84@gmail.com
copyright:           2016 Giovanni Cappellotto
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sound.Player
                     , Sound.Player.AudioInfo
                     , Sound.Player.AudioPlay
                     , Sound.Player.Types
                     , Sound.Player.Widgets
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 4.9
                     , brick >= 0.6.4 && < 0.7
                     , bytestring >= 0.10.6 && < 0.11
                     , data-default >= 0.5.3 && < 0.6
                     , directory >= 1.2.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , microlens >= 0.4.2.1 && < 0.5
                     , process >= 1.2.3 && < 1.3
                     , text >= 1.2.2.1 && < 1.3
                     , transformers >= 0.4.2 && < 0.5
                     , vector >= 0.11 && < 0.12
                     , vty >= 5.5 && < 5.6
                     , xml-conduit >= 1.3.5 && < 1.4
  default-language:    Haskell2010

executable haskell-player
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , haskell-player

  default-language:    Haskell2010

test-suite haskell-player-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-player
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/potomak/haskell-player
